--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-native-screens": "1.0.0-alpha.22",
     "react-native-web": "^0.11.4",
     "react-navigation": "^4.0.5",
-    "react-navigation-stack": "^1.7.3"
+    "react-navigation-header-buttons": "^3.0.2",
+    "react-navigation-stack": "^1.7.3",
+    "react-navigation-tabs": "^2.5.3"
   },
   "devDependencies": {
     "@types/react": "^16.8.23",
